# SchemaWeaver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/schemaweaver/: __init__.py  cli.py  mcp_server.py  model.py  pipeline.py  sql_check.py  store.py
src/schemaweaver/adapters/: __init__.py  base.py  tkmybatis.py
tests/: conftest.py  test_store_fts.py  test_tkmybatis.py
