[project]
name = "schemaweaver"
version = "0.1.0"
description = "Static ORM-annotation → DB schema + business-semantics MCP server"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",          # MCP Python SDK (含 FastMCP)
    "sqlglot>=23",       # SQL 解析（纯 Python）
    "jieba>=0.42",       # 中文分词（FTS5 预分词）
    "click>=8",          # CLI
    "rich>=13",          # 终端输出
]

[project.optional-dependencies]
ast-java = ["javalang>=0.13"]      # 仅 JPA/复杂 mybatis-plus 才需
ast-go   = ["tree-sitter-go"]      # 可选
dev      = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
schemaweaver = "schemaweaver.cli:main"

[project.entry-points."schemaweaver.adapters"]   # 内置 adapter 通过 entry_points 注册
tkmybatis    = "schemaweaver.adapters.tkmybatis:TkMybatisAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schemaweaver"]
